# perf-baseline

./: CMakeLists.txt  CMakePresets.json  README.md  autobuild.sh  main.cpp  vcpkg.json
src/: main.cpp
src/cpus/: CMakeLists.txt  cycle.cpp  cycle.hpp
